# PlotJuggler

./: .gitignore  CMakeLists.txt  README.md  commentList.txt  plan.md
include/PlotJuggler/: pj_plugin.h
plotjuggler_app/: CMakeLists.txt  curvelist_panel.cpp  curvelist_panel.h  curvelist_view.cpp  curvelist_view.h  curvetree_view.cpp  curvetree_view.h  customtracker.h  logingpanel.cpp  logingpanel.h  logpanel.cpp  logpanel.h  logpanel.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nlohmann_parsers.cpp  plot_docker.cpp  plot_docker.h  plotlegend.h  plotwidget.cpp  plotwidget.h  resource.qrc  timeseries_qwt.cpp  utils.cpp
plotjuggler_base/include/PlotJuggler/: datastreamer_base.h  plotdata.h
plotjuggler_plugins/DataStreamSerialPort/: CMakeLists.txt  datastreamserial.cpp
plotjuggler_plugins/DataStreamUDP/: udp_server.cpp
plotjuggler_plugins/DataStreamWebsocket/: CMakeLists.txt  ObjectInfo.cpp  ObjectInfo.h  bytesConversion.cpp  bytesConversion.h  websocket_server.cpp  websocket_server.h
plotter_gui/: CMakeLists.txt  mainwindow.cpp
plugins/DataStreamSerialPort/: CMakeLists.txt  datastreamserial.cpp  datastreamserial.h
plugins/DataStreamWebSocket/: CMakeLists.txt  datastreamserver.cpp
